reorganizing the github pages folder items

--- a/index.html
+++ b/index.html
@@ -314,9 +314,10 @@
                                 <pre class="text-white">
 Website made by © Jaydeep Mistry
 Made to resemble Jupyter Notebooks
+Not a real notebook or kernel
 
-Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>
-Hosted on <a href="https://github.com/jrmistry/jrmistry.github.io/" target="_blank">GitHub Pages</a></pre>
+Hosted on <a href="https://github.com/jrmistry/jrmistry.github.io/" target="_blank">GitHub Pages</a>
+Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></pre>
                             </p>
                         </div>
                     </div>
