updating experiences content and replacing footer

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></
                     <p class="card-text">${rowItems["body"]}</p>
                 </div>
                 <div class="card-footer text-right">
-                    <small class="text-muted">${rowItems["footer"]}</small>
+                    <small class="text-muted">${rowItems["date"]} | ${rowItems["location"]}</small>
                     <a href="${rowItems["url"]}" target="_blank" class="card-link"><i class="fas fa-external-link-alt"></i></a>
                 </div>
                 `;
