adding more images and fixing img urls

--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@ Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></
                 if (rowItems["img"] == "") {
                     var img = ``;
                 } else {
+                    console.log(rowItems["img"]);
                     var img = `<img src="${rowItems["img"]}" class="card-img-top" alt="">`;
                 }
 
